<resources>
    <string name="app_name">4MDoc</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_select_language_screen">SelectLanguageScreen</string>
    <string name="edu_content_1">24x7 availability for doctor. Pathology and medicine.</string>
    <string name="edu_content_2">Connect with doctor on mobile.</string>
    <string name="edu_content_3">Get test report online on mobile.</string>
    <string name="edu_content_4">Order medicine online.</string>
    <string name="edu_content_5">Get online health care tips.</string>
    <string name="footer_content">Reach us for any query at info@4mdoctor.com or call us on +91-9999999999</string>

    <string name="title_activity_education_screen">EducationScreen</string>
    <string name="title_activity_mobile_otpveify_screen">MobileOTPVeifyScreen</string>

    <string name="goText">Go</string>
    <string name="let_start_button">Let\'s Start</string>
    <string name="send_otp">Send OTP</string>

    <string name="proceedText">Proceed</string>
    <string name="or">OR</string>
    <string name="signIn">Sign In</string>



    <string name="pin_content_desc">PIN input field</string>
    <string name="pin_label_text">PIN</string>
    <string name="title_activity_dashboard_screen">Dashboard</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>
    <string name="title_activity_login_screen">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

</resources>
